modified our car

--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/our-car.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Vollkorn+SC" rel="stylesheet">
 </head>
 <body>
 <section class="header">
@@ -145,81 +146,125 @@
 </section>
 <section class="our-car">
     <div class="container">
+        <div class="our-car-title">
+            <div class="left-line_red"></div>
+            <div class="red_left"></div>
+            <div class="title-text">
+                OUR CARS
+            </div>
+            <div class="red_rigth"></div>
+            <div class="right-line_red"></div>
+        </div>
+        <div class="our-car-title-after">
+            WELCOME TO AUTO CAR
+        </div>
         <div class="cars-block">
             <div class="car-item">
                 <div class="image car1">
                     <div class="image_wrapper">
-                        <div class="image__price"></div>
+                        <div class="image__price"><a>$35.000</a></div>
                         <div class="blank-triangle"></div>
                     </div>
                 </div>
-                <div class="description"></div>
+                <div class="description">
+                    <a>INFINITI EX35, NAVI, LEATHER, ABS</a><br>
+                    <a class="gas">40/65 <img src="./images/gas.png" width="20px" height="20px"></a>
+                    <a class="dsg">Automatic <i class="fa fa-car" aria-hidden="true"></i></a>
+                </div>
             </div>
             <div class="car-item">
                 <div class="image car2">
                     <div class="image_wrapper">
-                        <div class="image__price"></div>
+                        <div class="image__price"><a>$24.000</a></div>
                         <div class="blank-triangle"></div>
                     </div>
                 </div>
-                <div class="description"></div>
+                <div class="description">
+                    <a>INFINITI QX50, NAVI, LEATHER, ABS</a><br>
+                    <a class="gas">45/65 <img src="./images/gas.png" width="20px" height="20px"></a>
+                    <a class="dsg">Automatic <i class="fa fa-car" aria-hidden="true"></i></a>
+                </div>
             </div>
             <div class="car-item">
                 <div class="image car3">
                     <div class="image_wrapper">
-                        <div class="image__price"></div>
+                        <div class="image__price"><a>$19.000</a></div>
                         <div class="blank-triangle"></div>
                     </div>
                 </div>
-                <div class="description"></div>
+                <div class="description">
+                    <a>INFINITI M50, NAVI, LEATHER, ABS</a><br>
+                    <a class="gas">60/65 <img src="./images/gas.png" width="20px" height="20px"></a>
+                    <a class="dsg">Automatic <i class="fa fa-car" aria-hidden="true"></i></a>
+                </div>
             </div>
             <div class="car-item">
                 <div class="image car4">
                     <div class="image_wrapper">
-                        <div class="image__price"></div>
+                        <div class="image__price"><a>$22.000</a></div>
                         <div class="blank-triangle"></div>
                     </div>
                 </div>
-                <div class="description"></div>
+                <div class="description">
+                    <a>INFINITI M45, NAVI, LEATHER, ABS</a><br>
+                    <a class="gas">45/65 <img src="./images/gas.png" width="20px" height="20px"></a>
+                    <a class="dsg">Automatic <i class="fa fa-car" aria-hidden="true"></i></a>
+                </div>
             </div>
             <div class="car-item">
                 <div class="image car5">
                     <div class="image_wrapper">
-                        <div class="image__price"></div>
+                        <div class="image__price"><a>$80.000</a></div>
                         <div class="blank-triangle"></div>
                     </div>
                 </div>
-                <div class="description"></div>
+                <div class="description">
+                    <a>INFINITI QX56, NAVI, LEATHER, ABS</a><br>
+                    <a class="gas">45/65 <img src="./images/gas.png" width="20px" height="20px"></a>
+                    <a class="dsg">Automatic <i class="fa fa-car" aria-hidden="true"></i></a>
+                </div>
             </div>
             <div class="car-item">
                 <div class="image car6">
                     <div class="image_wrapper">
-                        <div class="image__price"></div>
+                        <div class="image__price"><a>$15.000</a></div>
                         <div class="blank-triangle"></div>
                     </div>
                 </div>
-                <div class="description"></div>
+                <div class="description">
+                    <a>INFINITI QX56, NAVI, LEATHER, ABS</a><br>
+                    <a class="gas">45/65 <img src="./images/gas.png" width="20px" height="20px"></a>
+                    <a class="dsg">Automatic <i class="fa fa-car" aria-hidden="true"></i></a>
+                </div>
             </div>
             <div class="car-item">
                 <div class="image car7">
                     <div class="image_wrapper">
-                        <div class="image__price"></div>
+                        <div class="image__price"><a>$19.000</a></div>
                         <div class="blank-triangle"></div>
                     </div>
                 </div>
-                <div class="description"></div>
+                <div class="description">
+                    <a>INFINITI QX50, NAVI, LEATHER, ABS</a><br>
+                    <a class="gas">45/65 <img src="./images/gas.png" width="20px" height="20px"></a>
+                    <a class="dsg">Automatic <i class="fa fa-car" aria-hidden="true"></i></a>
+                </div>
             </div>
             <div class="car-item">
                 <div class="image car8">
                     <div class="image_wrapper">
-                        <div class="image__price"></div>
+                        <div class="image__price"><a>$32.000</a></div>
                         <div class="blank-triangle"></div>
                     </div>
                 </div>
-                <div class="description"></div>
+                <div class="description">
+                    <a>INFINITI QX20, NAVI, LEATHER, ABS</a><br>
+                    <a class="gas">45/65 <img src="./images/gas.png" width="20px" height="20px"></a>
+                    <a class="dsg">Automatic <i class="fa fa-car" aria-hidden="true"></i></a>
+                </div>
             </div>
         </div>
-
+        <div class="view-all"><a class="text" href="javascript:void(0)">View all</a></div>
     </div>
 </section>
 <section class="specials">
