added special section

--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/main-page.css">
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
     <link rel="stylesheet" type="text/css" href="css/our-car.css">
+    <link rel="stylesheet" type="text/css" href="css/specials.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn+SC" rel="stylesheet">
@@ -268,13 +269,48 @@
     </div>
 </section>
 <section class="specials">
-    <div class="container"></div>
+    <div class="container">
+        <div class="our-car-title">
+            <div class="left-line_red"></div>
+            <div class="red_left"></div>
+            <div class="title-text white-text">
+                SPECIALS
+            </div>
+            <div class="red_rigth"></div>
+            <div class="right-line_red"></div>
+        </div>
+        <div class="our-car-title-after">
+            WELCOME TO AUTO CAR
+        </div>
+
+    </div>
+    <div class="specials-cars">
+        <div class="special-item special-car1"></div>
+        <div class="special-item special-car2"></div>
+        <div class="special-item special-car3"></div>
+        <div class="special-item special-car4"></div>
+    </div>
+
+
 </section>
 <section class="select-car">
     <div class="container"></div>
 </section>
 <section class="why-choose">
-    <div class="container"></div>
+    <div class="container">
+        <div class="our-car-title">
+            <div class="left-line_red"></div>
+            <div class="red_left"></div>
+            <div class="title-text white-text">
+                WHY CHOOSE US
+            </div>
+            <div class="red_rigth"></div>
+            <div class="right-line_red"></div>
+        </div>
+        <div class="our-car-title-after">
+            WELCOME TO AUTO CAR
+        </div>
+    </div>
 </section>
 <section class="clients-says">
     <div class="container"></div>
