--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/navbar.css">
     <link rel="stylesheet" type="text/css" href="css/our-car.css">
     <link rel="stylesheet" type="text/css" href="css/specials.css">
+    <link rel="stylesheet" type="text/css" href="css/select-car.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn+SC" rel="stylesheet">
@@ -328,12 +329,34 @@
             </div>
         </div>
     </div>
-
-
-
 </section>
 <section class="select-car">
-    <div class="container"></div>
+    <div class="container">
+        <div class="question-block">
+            <div class="red-block">
+                <div class="layer bg-red">
+                    <div class="content-block">
+                        <div class="car-image">
+                            <i class="fa fa-search" aria-hidden="true"></i><br>
+                            <i class="fa fa-car" aria-hidden="true"></i>
+                        </div>
+                        <div class="car-text"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="black-block">
+                <div class="layer bg-darkgray wrapper">
+                    <div class="content-block">
+                        <div class="car-image">
+                            <i class="fa fa-search" aria-hidden="true"></i><br>
+                            <i class="fa fa-car" aria-hidden="true"></i>
+                        </div>
+                        <div class="car-text"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 <section class="why-choose">
     <div class="container">
