finished specials block

--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -340,7 +340,14 @@
                             <i class="fa fa-search" aria-hidden="true"></i><br>
                             <i class="fa fa-car" aria-hidden="true"></i>
                         </div>
-                        <div class="car-text"></div>
+                        <div class="car-text">
+                            <h6>ARE YOU ARE LOOKING FOR A CAR?</h6>
+                            <p class="text">
+                                There are many variations of passages of Lorem Ipsum,
+                                available but the majority have suffered alteration in
+                                some form, by injected humour
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -348,10 +355,17 @@
                 <div class="layer bg-darkgray wrapper">
                     <div class="content-block">
                         <div class="car-image">
-                            <i class="fa fa-search" aria-hidden="true"></i><br>
+                            <i class="fa fa-usd" aria-hidden="true"></i>
                             <i class="fa fa-car" aria-hidden="true"></i>
                         </div>
-                        <div class="car-text"></div>
+                        <div class="car-text">
+                            <h6>DO YOU WANT TO SELL A CAR?</h6>
+                            <p class="text">
+                                There are many variations of passages of Lorem Ipsum,
+                                available but the majority have suffered alteration in
+                                some form, by injected humour
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
