--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -373,22 +373,25 @@
     </div>
 </section>
 <section class="why-choose">
-    <div class="container">
-        <div class="our-car-title">
-            <div class="left-line_red"></div>
-            <div class="red_left"></div>
-            <div class="title-text white-text">
-                WHY CHOOSE US
+    <div class="layer bg-darkgray">
+        <div class="container">
+            <div class="our-car-title">
+                <div class="left-line_red"></div>
+                <div class="red_left"></div>
+                <div class="title-text white-text">
+                    WHY CHOOSE US
+                </div>
+                <div class="red_rigth"></div>
+                <div class="right-line_red"></div>
             </div>
-            <div class="red_rigth"></div>
-            <div class="right-line_red"></div>
-        </div>
-        <div class="our-car-title-after">
-            WELCOME TO AUTO CAR
+            <div class="our-car-title-after">
+                WELCOME TO AUTO CAR
+            </div>
         </div>
     </div>
 </section>
 <section class="clients-says">
+
     <div class="container"></div>
 </section>
 <section class="about">
