added client feedback section

--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" type="text/css" href="css/our-car.css">
     <link rel="stylesheet" type="text/css" href="css/specials.css">
     <link rel="stylesheet" type="text/css" href="css/select-car.css">
+    <link rel="stylesheet" type="text/css" href="css/clients-says.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 </head>
 <body>
 <section class="header">
@@ -391,8 +393,38 @@
     </div>
 </section>
 <section class="clients-says">
+    <div class="container">
+        <div class="clients wrapper">
+            <div class="clients__text">
+                <p class="title">WHAT<br>
+                    CLIENTS SAYS?</p>
 
-    <div class="container"></div>
+                <p class="feedback">
+                    From a set of data, AutoSelect is able to establish a principle, or work out a rule, or suggest a
+                    reason for failure or success. His analysis is always accurate and sometimes original.
+                    Aiming for a top job in the organization. He sets very high standards, aware that this will bring
+                    attention and promotion. A pleasant, outgoing personality who always gets on well with others.
+                    AutoSelect will always be noticed and popular in a group. When ideas are challenged by others,
+                    AutoSelect listens to their view politely, but is able to maintain a position firmly and
+                    persuasively without aggression.
+                </p>
+                <p class="feedback-giver">GEORGE W. BUSH Junior</p>
+                <div class="feedback-faces">
+                    <div class="feedback-face-item face1"></div>
+                    <div class="feedback-face-item face2"></div>
+                    <div class="feedback-face-item face3"></div>
+                </div>
+            </div>
+            <div class="clients__logos">
+                <div class="logo-item"></div>
+                <div class="logo-item"></div>
+                <div class="logo-item"></div>
+                <div class="logo-item"></div>
+                <div class="logo-item"></div>
+                <div class="logo-item"></div>
+            </div>
+        </div>
+    </div>
 </section>
 <section class="about">
     <div class="container"></div>
