--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -288,45 +288,53 @@
 
     </div>
     <div class="specials-cars">
-        <div class="special-item special-car1">
-            <div class="discount">
-                <div class="text-block">
-                    <a>1.8</a>
-                </div>
-                <div class="two-rows">
-                    <a>%<br></a>
-                    <a>APR</a>
-                </div>
-            </div>
-        </div>
-        <div class="special-item special-car2">
-            <div class="discount all-width without-bg white-text flex-vertical">
-                <div class="row first"><a>INFINITI FX 50S</a></div>
-                <div class="row second"><a><a class="red">590$</a>/MO <br></a></div>
-                <div class="row third">
-                    <a class="gas">40/65 <img src="./images/gas.png" width="20px" height="20px"></a>
-                    <a class="dsg">Automatic <i class="fa fa-car" aria-hidden="true"></i></a>
+        <div class="special-item">
+            <div class="parent-wrapper special-car1">
+                <div class="discount">
+                    <div class="text-block">
+                        <a>1.8</a>
+                    </div>
+                    <div class="two-rows">
+                        <a>%<br></a>
+                        <a>APR</a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="special-item special-car3">
-            <div class="discount long">
-                <div class="text-block">
-                    <a>24</a>
-                </div>
-                <div class="two-rows small-rows-text">
-                    <a style="    font-size: 31px; letter-spacing: 16px;">MONTH<br></a>
-                    <a style="    font-size: 16px;">AN APPROVED CREDIT</a>
+        <div class="special-item">
+            <div class="parent-wrapper special-car2">
+                <div class="discount all-width without-bg white-text flex-vertical">
+                    <div class="row first"><a>INFINITI FX 50S</a></div>
+                    <div class="row second"><a><a class="red">590$</a>/MO <br></a></div>
+                    <div class="row third">
+                        <a class="gas">40/65 <img src="./images/gas.png" width="20px" height="20px"></a>
+                        <a class="dsg">Automatic <i class="fa fa-car" aria-hidden="true"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="special-item special-car4">
-            <div class="discount all-width without-bg white-text flex-vertical">
-                <div class="row first"><a>INFINITI FX 35S</a></div>
-                <div class="row second"><a><a class="red">567$</a>/MO <br></a></div>
-                <div class="row third">
-                    <a class="gas">40/65 <img src="./images/gas.png" width="20px" height="20px"></a>
-                    <a class="dsg">Automatic <i class="fa fa-car" aria-hidden="true"></i></a>
+        <div class="special-item ">
+            <div class="parent-wrapper special-car3">
+                <div class="discount long">
+                    <div class="text-block">
+                        <a>24</a>
+                    </div>
+                    <div class="two-rows small-rows-text">
+                        <a style="    font-size: 31px; letter-spacing: 16px;">MONTH<br></a>
+                        <a style="    font-size: 16px;">AN APPROVED CREDIT</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="special-item ">
+            <div class="parent-wrapper special-car4">
+                <div class="discount all-width without-bg white-text flex-vertical">
+                    <div class="row first"><a>INFINITI FX 35S</a></div>
+                    <div class="row second"><a><a class="red">567$</a>/MO <br></a></div>
+                    <div class="row third">
+                        <a class="gas">40/65 <img src="./images/gas.png" width="20px" height="20px"></a>
+                        <a class="dsg">Automatic <i class="fa fa-car" aria-hidden="true"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
