added scale for car-items

--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -164,10 +164,12 @@
         </div>
         <div class="cars-block">
             <div class="car-item">
-                <div class="image car1">
-                    <div class="image_wrapper">
-                        <div class="image__price"><a>$35.000</a></div>
-                        <div class="blank-triangle"></div>
+                <div class="parent-wrapper">
+                    <div class="image car1">
+                        <div class="image_wrapper">
+                            <div class="image__price"><a>$35.000</a></div>
+                            <div class="blank-triangle"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="description">
@@ -177,10 +179,12 @@
                 </div>
             </div>
             <div class="car-item">
-                <div class="image car2">
-                    <div class="image_wrapper">
-                        <div class="image__price"><a>$24.000</a></div>
-                        <div class="blank-triangle"></div>
+                <div class="parent-wrapper">
+                    <div class="image car2">
+                        <div class="image_wrapper">
+                            <div class="image__price"><a>$24.000</a></div>
+                            <div class="blank-triangle"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="description">
@@ -190,10 +194,12 @@
                 </div>
             </div>
             <div class="car-item">
-                <div class="image car3">
-                    <div class="image_wrapper">
-                        <div class="image__price"><a>$19.000</a></div>
-                        <div class="blank-triangle"></div>
+                <div class="parent-wrapper">
+                    <div class="image car3">
+                        <div class="image_wrapper">
+                            <div class="image__price"><a>$19.000</a></div>
+                            <div class="blank-triangle"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="description">
@@ -203,10 +209,12 @@
                 </div>
             </div>
             <div class="car-item">
-                <div class="image car4">
-                    <div class="image_wrapper">
-                        <div class="image__price"><a>$22.000</a></div>
-                        <div class="blank-triangle"></div>
+                <div class="parent-wrapper">
+                    <div class="image car4">
+                        <div class="image_wrapper">
+                            <div class="image__price"><a>$22.000</a></div>
+                            <div class="blank-triangle"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="description">
@@ -216,10 +224,12 @@
                 </div>
             </div>
             <div class="car-item">
-                <div class="image car5">
-                    <div class="image_wrapper">
-                        <div class="image__price"><a>$80.000</a></div>
-                        <div class="blank-triangle"></div>
+                <div class="parent-wrapper">
+                    <div class="image car5">
+                        <div class="image_wrapper">
+                            <div class="image__price"><a>$80.000</a></div>
+                            <div class="blank-triangle"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="description">
@@ -229,10 +239,12 @@
                 </div>
             </div>
             <div class="car-item">
-                <div class="image car6">
-                    <div class="image_wrapper">
-                        <div class="image__price"><a>$15.000</a></div>
-                        <div class="blank-triangle"></div>
+                <div class="parent-wrapper">
+                    <div class="image car6">
+                        <div class="image_wrapper">
+                            <div class="image__price"><a>$15.000</a></div>
+                            <div class="blank-triangle"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="description">
@@ -242,10 +254,12 @@
                 </div>
             </div>
             <div class="car-item">
-                <div class="image car7">
-                    <div class="image_wrapper">
-                        <div class="image__price"><a>$19.000</a></div>
-                        <div class="blank-triangle"></div>
+                <div class="parent-wrapper">
+                    <div class="image car7">
+                        <div class="image_wrapper">
+                            <div class="image__price"><a>$19.000</a></div>
+                            <div class="blank-triangle"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="description">
@@ -255,10 +269,12 @@
                 </div>
             </div>
             <div class="car-item">
-                <div class="image car8">
-                    <div class="image_wrapper">
-                        <div class="image__price"><a>$32.000</a></div>
-                        <div class="blank-triangle"></div>
+                <div class="parent-wrapper">
+                    <div class="image car8">
+                        <div class="image_wrapper">
+                            <div class="image__price"><a>$32.000</a></div>
+                            <div class="blank-triangle"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="description">
