added structure for footer

--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/specials.css">
     <link rel="stylesheet" type="text/css" href="css/select-car.css">
     <link rel="stylesheet" type="text/css" href="css/clients-says.css">
+    <link rel="stylesheet" type="text/css" href="css/about-us.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn+SC" rel="stylesheet">
@@ -434,24 +435,61 @@
                 </p>
                 <p class="feedback-giver">GEORGE W. BUSH Junior</p>
                 <div class="feedback-faces">
-                    <div class="feedback-face-item face1"></div>
-                    <div class="feedback-face-item face2"></div>
-                    <div class="feedback-face-item face3"></div>
+                    <div class="feedback-face-item face1">
+                    </div>
+                    <div class="feedback-face-item face2">
+                    </div>
+                    <div class="feedback-face-item face3">
+                    </div>
                 </div>
             </div>
             <div class="clients__logos">
-                <div class="logo-item"></div>
-                <div class="logo-item"></div>
-                <div class="logo-item"></div>
-                <div class="logo-item"></div>
-                <div class="logo-item"></div>
-                <div class="logo-item"></div>
+                <div class="logo-item">
+                    <div class="parent-wrapper logo1">
+                    </div>
+                </div>
+                <div class="logo-item">
+                    <div class="parent-wrapper logo2">
+                    </div>
+                </div>
+                <div class="logo-item">
+                    <div class="parent-wrapper logo3">
+                    </div>
+                </div>
+                <div class="logo-item">
+                    <div class="parent-wrapper logo4">
+                    </div>
+                </div>
+                <div class="logo-item">
+                    <div class="parent-wrapper logo5">
+                    </div>
+                </div>
+                <div class="logo-item">
+                    <div class="parent-wrapper logo6">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </section>
 <section class="about">
-    <div class="container"></div>
+    <div class="container">
+        <div class="about-us-flex">
+            <div class="about-item about-company"></div>
+            <div class="about-item photo-gallery"></div>
+            <div class="about-item latest-posts"></div>
+            <div class="about-item social-net"></div>
+            <div class="about-item contacts"></div>
+            <div class="about-item sales-hours">
+                <div class="subscribe"></div>
+            </div>
+            <div class="about-item service-hours"></div>
+            <div class="about-item parts-hours">
+                <div class="search-row"></div>
+            </div>
+
+        </div>
+    </div>
 </section>
 <section class="footer">
     <div class="container"></div>
