--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/main-page.css">
@@ -53,14 +55,14 @@
 <section class="navbar-menu">
     <div class="container">
         <div class="navbar-menu_wrapper">
-            <div class="item navbar__home"><a href="javascript:void(0)">HOME</a></div>
-            <div class="item navbar__inventory">INVENTORY</div>
-            <div class="item navbar__services">SERVICES</div>
-            <div class="item navbar__pages">PAGES</div>
-            <div class="item navbar__blog">BLOG</div>
-            <div class="item navbar__shop">SHOP</div>
-            <div class="item navbar__contact">CONTACT</div>
-            <div class="item navbar__compare">
+            <div class="item ">OUR CARS</div>
+            <div class="item ">SPECIALS</div>
+            <div class="item ">SELL CAR</div>
+            <div class="item ">WHY CHOOSE US</div>
+            <div class="item "><a>CLIENTS FEEDBACK'S</a></div>
+            <div class="item ">ABOUT US</div>
+            <div class="item " style="display: none">CONTACT</div>
+            <div class="item " style="display: none">
                 <div class="navbar__compare__text">
                     <a>COMPARE</a>
                 </div>
@@ -475,7 +477,14 @@
 <section class="about">
     <div class="container">
         <div class="about-us-flex">
-            <div class="about-item about-company"></div>
+            <div class="about-item about-company">
+                <div class="title"><p>About AutoSelect</p></div>
+                <div class="about-us-text"><p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                </p>
+                </div>
+            </div>
             <div class="about-item photo-gallery"></div>
             <div class="about-item latest-posts"></div>
             <div class="about-item social-net"></div>
@@ -487,12 +496,13 @@
             <div class="about-item parts-hours">
                 <div class="search-row"></div>
             </div>
-
         </div>
     </div>
 </section>
+
 <section class="footer">
     <div class="container"></div>
 </section>
+<script src="js/site.js"></script>
 </body>
 </html>
