--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -55,7 +55,7 @@
 <section class="navbar-menu">
     <div class="container">
         <div class="navbar-menu_wrapper">
-            <div class="item ">OUR CARS</div>
+            <div class="item"><a href="#our-cars"></a> </div>
             <div class="item ">SPECIALS</div>
             <div class="item ">SELL CAR</div>
             <div class="item ">WHY CHOOSE US</div>
@@ -151,7 +151,7 @@
         </div>
     </div>
 </section>
-<section class="our-car">
+<section class="our-car"  name="our-cars">
     <div class="container">
         <div class="our-car-title">
             <div class="left-line_red"></div>
