finished template epat'

--- a/taskFinal/index.html
+++ b/taskFinal/index.html
@@ -15,11 +15,13 @@
     <link rel="stylesheet" type="text/css" href="css/select-car.css">
     <link rel="stylesheet" type="text/css" href="css/clients-says.css">
     <link rel="stylesheet" type="text/css" href="css/about-us.css">
+    <link rel="stylesheet" type="text/css" href="css/why-us.css">
     <link rel="stylesheet" type="text/css" href="css/media.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
 
 </head>
 <body>
@@ -546,6 +548,32 @@
             </div>
             <div class="our-car-title-after">
                 WELCOME TO AUTO CAR
+            </div>
+            <div class="why-us-flex-wrapper">
+                <div class="why-item">
+                    <div class="image"><img src="images/why-us/why-1.png"></div>
+                    <div class="title">WIDE RANGE OF BRANDS</div>
+                    <div class="description">A pleasant, outgoing personality who always gets on well with others.
+                        AutoSelect will always be noticed and popular in a group.</div>
+                </div>
+                <div class="why-item">
+                    <div class="image"><img src="images/why-us/why-2.png"></div>
+                    <div class="title">FINANCING MADE EASY</div>
+                    <div class="description">A pleasant, outgoing personality who always gets on well with others.
+                        AutoSelect will always be noticed and popular in a group.</div>
+                </div>
+                <div class="why-item">
+                    <div class="image"><img src="images/why-us/why-3.png"></div>
+                    <div class="title">TRUSTED BY THOUSANDS</div>
+                    <div class="description">A pleasant, outgoing personality who always gets on well with others.
+                        AutoSelect will always be noticed and popular in a group.</div>
+                </div>
+                <div class="why-item">
+                    <div class="image"><img src="images/why-us/why-4.png"></div>
+                    <div class="title">CAR SERVCIE & MAINTANCE</div>
+                    <div class="description">A pleasant, outgoing personality who always gets on well with others.
+                        AutoSelect will always be noticed and popular in a group.</div>
+                </div>
             </div>
         </div>
     </div>
